plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.guava
    implementation libs.picocli
    implementation libs.jspecify
    implementation libs.sqlite.jdbc
    implementation libs.dotenv.java

    annotationProcessor libs.picocli.codegen

    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'com.ctntc.flock.App'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.named('run') {
    workingDir = rootProject.projectDir
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
